--- a/src/QTodo/Widgets/QTodoItemWidget.ui
+++ b/src/QTodo/Widgets/QTodoItemWidget.ui
@@ -14,18 +14,20 @@
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">#widget_main{
-	border-width:1px;
-	border-style:ouset;
-	border-radius:4px;
-	border-color: rgb(150, 150, 150);
-}
-
-QLabel{
+   <string notr="true">#label_title{
 	font-size:16px;
 }
 #plainTextEdit{
-}</string>
+}
+
+#widget_main{
+	border-color: rgb(200, 200, 200);
+	border-width:1px;
+	border-style:outset;
+	/*background-color: rgb(254, 250, 234);*/
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.8,stop: 0 #EEEEEE, stop: 1 #C0C0C0);
+}
+</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="spacing">
@@ -81,9 +83,39 @@ QLabel{
           </widget>
          </item>
          <item>
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>10</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
           <widget class="QLabel" name="label_2">
            <property name="text">
-            <string>(0)</string>
+            <string>(</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_count">
+           <property name="text">
+            <string>0</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string> 待办)</string>
            </property>
           </widget>
          </item>
@@ -108,6 +140,65 @@ QLabel{
         <property name="placeholderText">
          <string>Type todo items HERE...</string>
         </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QScrollArea" name="scrollArea">
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::NoFrame</enum>
+        </property>
+        <property name="widgetResizable">
+         <bool>true</bool>
+        </property>
+        <widget class="QWidget" name="widget_details">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>689</width>
+           <height>212</height>
+          </rect>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_3">
+          <property name="spacing">
+           <number>0</number>
+          </property>
+          <property name="leftMargin">
+           <number>4</number>
+          </property>
+          <property name="topMargin">
+           <number>4</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <layout class="QVBoxLayout" name="verticalLayout_details">
+            <item>
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </item>
+         </layout>
+         <zorder>verticalSpacer</zorder>
+         <zorder></zorder>
+        </widget>
        </widget>
       </item>
       <item>
