--- a/src/QTodo/Resources/resources.qrc
+++ b/src/QTodo/Resources/resources.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/ui/bkgImages">
-        <file>images/itemBkgImage.png</file>
-        <file>images/itemBkgImage2.png</file>
+        <file>itemBkgImage.png</file>
+        <file>todo.png</file>
     </qresource>
 </RCC>
